alpm-types/src/version/snapshots/buildtool::invalid_buildtool_version@case_2_minimal_version_with_epoch_and_architecture.snap
---
source: alpm-types/src/version/buildtool.rs
---
Parser failed with the following error:
1:1.0.0
  ^
expected alpm-pkgver string, followed by a '-' and an alpm-pkgrel string
